--- a/index.html
+++ b/index.html
@@ -88,15 +88,10 @@ $$ | \$$ |\$$$$$$$\  \$$$$  |\$$$$  |$$ |\$$$$$$$\ $$  /   \$$ |\$$$$$$$\ $$$$$$
 					We will take the corresponding actions as soon as possible.</div>
 				<div class="text-body">
 					<h2>About</h2>
-					<p>NettleWeb is a new, modern, free online gaming platform. It offers over 2000 HTML5, Flash, DOS, and classic games for free.
-						With such a wide range of games, you'll never run out of options and can always find something new and exciting to play.</p>
-					<p>Apart from playing and sharing games, we also aim to build a community within this website. With our in-site chat feature,
-						you can engage in real-time conversations, share gaming tips, and collaborate on multiplayer games.</p>
-					<p>Although NettleWeb has already achieved a certain size in terms of storage and the amount of traffic received, it is
-						still under the stage of heavy construction. A significant amount of games will be added, and more features will be
-						introduced in the future, so don't panic if you found something missing.</p>
-					<p><a href="https://forms.gle/VA2iMuz5JpQNV3xV6">Writing a useful feedback</a> about your experience would also contribute
-						to the website's development.</p>
+					<p>Warning: Using this site may result in disciplinary action being taken. YOU are responsible for YOUR actions. </p>
+					<p> </p>
+					<p> </p>
+					<p> </p>
 				</div>
 			</div>
 			<div id="services-page">
