--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ $$ | \$$ |\$$$$$$$\  \$$$$  |\$$$$  |$$ |\$$$$$$$\ $$  /   \$$ |\$$$$$$$\ $$$$$$
 				<div class="text-body">
 					<h2>About</h2>
 					<p>Warning: Using this site may result in disciplinary action being taken. YOU are responsible for YOUR actions. </p>
-					<p> </p>
+					<p>*I did not make this. It is forked from a github.*</p>
 					<p> </p>
 					<p> </p>
 				</div>
